fix: counter, theme color and weather bloc

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     </queries>
 
     <application
-        android:label="Default Project"
+        android:label="Weather Counter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
